--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <h1>Play Scrolling Shooter</h1>
     <canvas id="screen" width="1024" height="786"></canvas>
     <h2>Instructions</h2>
+      <p>1. Use &larr;, &uarr;, &rarr; and &darr;; or 'a', 'w', 'd', and 's' to steer ship
+      <p>2. Press SPACEBAR to fire
+      <p>3. Collect powerups to boost firepower
+      <p>4. Dodge and destroy enemies to score points
+      <p>5. Destroy all enemies to progress to next level
+      <p>6. Press 'p' to pause and unpause game
     <script type="text/javascript" src="bundle.js"></script>
   </body>
 </html>
